macros/tests/ui/no_query_handlers.rs
use sails_macros::query_handlers;

#[query_handlers]
mod queries {}

fn main() {}
